# neutts-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: basic.rs  clone_voice.rs  convert_weights.rs  debug_decode.rs  download_models.rs  encode_reference.rs  speak.rs  stream_pcm.rs  test_pipeline.rs
include/: neutts.h
models/: README.md
scripts/: build-espeak-windows.ps1  build-espeak.sh  convert_weights.py  convert_weights_nopytorch.py  export_encoder.py
scripts/cmake/: mingw-toolchain.cmake
src/: backbone.rs  cache.rs  codec.rs  codec_burn.rs  download.rs  ffi.rs  lib.rs  model.rs  npy.rs  phonemize.rs  preprocess.rs  tokens.rs
tests/: e2e_codec.rs  integration_cache.rs  integration_npy.rs  integration_preprocess.rs  integration_tokens.rs
