[package]
name = "neutts"
version = "0.0.1"
edition = "2021"
authors = ["Eugene Hauptmann"]
description = "Rust port of NeuTTS — on-device voice-cloning TTS with GGUF backbone and NeuCodec decoder"
repository = "https://github.com/eugenehp/neutts-rs"
homepage = "https://github.com/eugenehp/neutts-rs"
keywords = ["tts", "text-to-speech", "voice-cloning", "gguf", "speech-synthesis"]
license = "MIT"

exclude = ["ios", "android"]

# ── Feature flags ────────────────────────────────────────────────────────────
#
# backbone — links llama-cpp-2 (builds llama.cpp via cmake + C++ compiler).
#            Enables load_backbone(), generate_*().
#
# espeak   — links libespeak-ng; enables raw-text input (text → IPA → model).
#
# wgpu     — reserved for future GPU acceleration (currently a no-op).
#            NeuCodec inference runs on CPU (ndarray) by default.
#
# metal / cuda — GPU acceleration for the backbone only (passed to llama-cpp-2).
[features]
default  = ["backbone"]
backbone = ["dep:llama-cpp-2"]
espeak   = []
wgpu     = []          # reserved — no-op until Burn/wgpu codec is wired up
metal    = ["llama-cpp-2?/metal"]
cuda     = ["llama-cpp-2?/cuda"]

[lib]
crate-type = ["staticlib", "rlib"]

# ── Platform-independent dependencies ────────────────────────────────────────

[dependencies]
# WAV I/O
hound = "3"

# Regex for text preprocessing, tokenisation, speech-token extraction
fancy-regex = "0.14"
regex = "1"
once_cell = "1"

# JSON config parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Random seed for sampling
rand = "0.8"

# NPY / NPZ parsing
zip = { version = "2", default-features = false, features = ["deflate"] }

# SHA-256 for reference-code cache keying
sha2 = "0.10"

# Platform cache dirs
dirs = "6"

# ── NeuCodec decoder (pure-Rust CPU inference) ────────────────────────────────
#
# Weights are loaded at runtime from `models/neucodec_decoder.safetensors`
# (convert once with `python scripts/convert_weights.py`).
#
# safetensors — loads the weight file (HuggingFace format)
# rustfft     — ISTFT for the Vocos decoder head
# ndarray     — tensor operations (matmul, conv1d, norms)
safetensors = "0.5"
rustfft = "6"
ndarray = "0.16"

# GGUF backbone — optional
[dependencies.llama-cpp-2]
version = "0.1"
optional = true

# ── Desktop-only dependencies ─────────────────────────────────────────────────

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
hf-hub = "0.5"

# ── Examples ──────────────────────────────────────────────────────────────────

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["backbone", "espeak"]

[[example]]
name = "test_pipeline"
path = "examples/test_pipeline.rs"

[[example]]
name = "encode_reference"
path = "examples/encode_reference.rs"

[[example]]
name = "clone_voice"
path = "examples/clone_voice.rs"
required-features = ["backbone", "espeak"]

[[example]]
name = "download_models"
path = "examples/download_models.rs"
